--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "mongoose": "^8.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "@nestjs/cli": "^10.0.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
